# ros2_sdk

./: README.md
rl_controller/: CMakeLists.txt  README.md  package.xml
rl_controller/config/: policy.yaml
rl_controller/include/rl_controller/: rl_controller.hpp
rl_controller/launch/: rl_controller.launch.py
rl_controller/model/: policy_walk_open.pt  policy_walk_open3.pt
rl_controller/src/: rl_controller_node.cpp
simple_trajectory_server/: README.md  package.xml  setup.cfg  setup.py
simple_trajectory_server/config/: config.yaml
simple_trajectory_server/launch/: simple_trajectory_server.launch.py
simple_trajectory_server/simple_trajectory_server/: simple_trajectory_node.py
star1_example/: CHANGELOG.rst  CMakeLists.txt  package.xml
xbot_common_interfaces/: CMakeLists.txt  package.xml
xbot_common_interfaces/action/: SimpleTrajectory.action
